# Nathan

./: .env.example  .gitignore  NATHAN_PROFILE.md  README.md  debug_log.txt  pyproject.toml
configs/maps/: benchmark_ood_seeds.yaml  benchmark_seeds.yaml
configs/train/: curr_stage0.yaml  curr_stage1.yaml  curr_stage1_dense.yaml  curr_stage2.yaml  curr_stage2_dense.yaml  curr_stage2_tuned.yaml  ppo.yaml
docs/: environment_spec.md  evaluation_protocol.md  map_generation_rules.md  observation_action_spaces.md
scripts/: debug_policy.py  eval_model.py  oracle_rollout.py  verify_env.py
scripts/make_dataset/: generate_benchmark.py  generate_ood.py
src/gridlock_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gridlock_rl/callbacks/: metrics_callback.py
src/gridlock_rl/core/: constants.py
src/gridlock_rl/envs/: grid_env.py  wrappers.py
src/gridlock_rl/maps/: generator.py  validation.py
src/gridlock_rl/training/: eval.py  eval_generalization.py  train_sb3.py
tests/: test_env_dynamics.py  test_grid_env_regressions.py
